<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/l_tab_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/l_tab_button_update_map"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_shape"
        android:onClick="button_update_map_event"
        android:text="@string/s_tab_button_update_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_tab_list_maps" />

    <Button
        android:id="@+id/l_tab_button_3d"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_shape"
        android:onClick="button_map_download_event"
        android:text="@string/s_tab_button_3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_tab_button_update_map" />

    <Button
        android:id="@+id/l_tab_button_path_retry"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:onClick="button_path_goto_event"
        android:text="@string/s_tab_button_find"
        app:layout_constraintBottom_toTopOf="@+id/l_tab_list_maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/l_tab_list_maps"
        android:layout_width="80dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>